# sensopart_interfaces

./: CMakeLists.txt  README.md  package.xml  setup.cfg  src_dependencies.rosinstall
msg/: Job.msg
srv/: Calibration.srv  ExtendedTrigger.srv  GetImage.srv  GetJobs.srv  GetPose.srv  SetJob.srv  TriggerRobotics.srv
